First version for message-queue
