# src/main/java/x1/stomp/boundary/ShareResource.java
@@ -12,21 +12,15 @@ import static x1.stomp.boundary.LinkConstants.*;
 
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
 
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
-import jakarta.jms.JMSConnectionFactory;
-import jakarta.jms.JMSContext;
-import jakarta.jms.Queue;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
 import jakarta.ws.rs.GET;
-import jakarta.ws.rs.HeaderParam;
 import jakarta.ws.rs.HttpMethod;
 import jakarta.ws.rs.NotFoundException;
 import jakarta.ws.rs.POST;
@@ -59,13 +53,11 @@ import io.micrometer.core.annotation.Timed;
 import x1.service.registry.Service;
 import x1.service.registry.Services;
 import x1.stomp.control.ShareSubscription;
-import x1.stomp.model.Action;
 import x1.stomp.model.Share;
 import x1.stomp.model.ShareWrapper;
 import x1.stomp.util.Logged;
 import x1.stomp.util.MDCKey;
 import x1.stomp.util.Metered;
-import x1.stomp.util.StockMarket;
 import x1.stomp.version.VersionData;
 
 @Path(ShareResource.PATH)
@@ -82,7 +74,6 @@ import x1.stomp.version.VersionData;
 @RestRequestStatusCounted
 public class ShareResource {
   private static final String MDC_KEY = "share";
-  private static final String CORRELATION_ID = "correlationId";
   protected static final String PATH = "/shares";
 
   @Inject
@@ -90,14 +81,6 @@ public class ShareResource {
 
   @Inject
   private ShareSubscription shareSubscription;
-
-  @Inject
-  @JMSConnectionFactory("java:/JmsXA")
-  private JMSContext context;
-
-  @Inject
-  @StockMarket
-  private Queue stockMarketQueue;
 
   @Context
   private UriInfo uriInfo;
@@ -150,7 +133,7 @@ public class ShareResource {
   @Parameters({
       @Parameter(in = ParameterIn.HEADER, name = X_CALLER_ID, schema = @Schema(implementation = String.class)),
       @Parameter(in = ParameterIn.HEADER, name = X_REQUEST_ID, schema = @Schema(implementation = String.class)) })
-  @APIResponse(responseCode = "201", description = "Share queued for subscription",
+  @APIResponse(responseCode = "201", description = "Share subscribed",
       content = @Content(schema = @Schema(implementation = Share.class)))
   @APIResponse(responseCode = "500", description = "Queuing failed")
   @APIResponse(responseCode = "400", description = "Invalid data",
@@ -158,21 +141,14 @@ public class ShareResource {
   @Timed
   public Response addShare(
       @Parameter(required = true,
-          description = "The share which is will be added for subscription") @NotNull @Valid Share share,
-      @Parameter(
-          description = "provide a Correlation-Id header to receive a response for your operation when it finished.") 
-      @HeaderParam(value = "Correlation-Id") String correlationId) {
+          description = "The share which is will be added for subscription") @NotNull @Valid Share share) {
     try {
-      var jmsCorrelationId = Objects.requireNonNullElse(correlationId, UUID.randomUUID().toString());
-      context.createProducer().setJMSCorrelationID(jmsCorrelationId).setProperty("type", "share")
-          .setProperty("action", Action.SUBSCRIBE.name()).send(stockMarketQueue, share);
-      MDC.put(CORRELATION_ID, jmsCorrelationId);
       MDC.put(MDC_KEY, share.getKey());
-      log.debug("message sent: {}", share);
+      shareSubscription.subscribe(share);
+      log.debug("subscribed share: {}", share);
       var location = UriBuilder.fromResource(ShareResource.class).path("{0}").build(share.getKey());
       return Response.created(location).build();
     } finally {
-      MDC.remove(CORRELATION_ID);
       MDC.remove(MDC_KEY);
     }
   }
